--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <!--<link rel="icon" href="<%= BASE_URL %>favicon.ico">-->
+    <link rel="icon" type="image/png" href="logo.png" />
     <link rel="icon" href="CurriculumVitae_CorentinRoy.pdf">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title>portfolio</title>
